# blog-source

./: .build.yml  .gitignore  .gitmodules  CNAME  Gemfile  _config.yml  about.md  config.toml  deploy.sh  g9.html  index.html  mkdocs.yml  publish  pyproject.toml  rotate-svg.py  sitemap.html  sitemap.html~  tags.html
_includes/: footer.html  head.html
_layouts/: default.html  post.html  tag_feed.xml  tag_page.html
_posts/: 2016-02-12-bad-news-from-my-grand-grandma.markdown  2016-02-12-the-beginning-of-my-blog.markdown  2016-02-12-welcome-to-jekyll.markdown  2016-02-13-and-she-has-gone.markdown  2016-02-15-good-software-engineering-rules.markdown  2016-02-16-news.markdown  2016-02-17-tips-in-os-x.markdown  2016-02-18-building-emacs-git-version-with-xwidgets-and-modules-in-archlinux.markdown  2016-02-18-how-to-create-a-vpn.markdown  2016-02-21-start-next-term-tomorrow.markdown  2016-02-24-unix-nice.markdown  2016-02-28-using-chinese-pyim.markdown  2016-03-09-some-interesting-links.md  2016-03-13-logo-is-a-lisp-dialect.md  2016-03-19-listen-and-write-subtitles-cameron.md  2016-04-03-tips-on-git-shallow-clone.md  2016-04-09-interesting-links.md  2016-05-22-exciting-new-software-updates.md  2016-07-07-the-end-of-senior-two.md  2016-07-23-a-good-way-to-show-git-diff-for-compressed-files.md  2016-08-02-dengshiyuan.md  2016-08-02-等势圆.md  2017-06-15-macos-sierra-karabiner-finally-support-complex-modifications.md  2017-07-22-farewell-flash.md  2017-10-16-a-funny-wiki-of-splay-tree.md  2017-10-16-review-on-yesterdays-jiujing-adi-contest.md  2017-10-17-on-scanf-and-scanf_s.md  (+88 more)
(+1436 files in other folders)
