[tool.poetry]
name = "blog-source"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocs-material = "9.2.0b0"
mkdocs-rss-plugin = "^1.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
