[tool.poetry]
name = "blog-source"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = {extras = ["imaging"], version = "^9.6.15"}
mkdocs-rss-plugin = "^1.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-wavedrom-plugin = {git = "https://github.com/jiegec/mkdocs-wavedrom-plugin.git"}
matplotlib = "^3.10.0"
lxml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
